# dapier_project

arduino/exam1/: exam1.ino  readme.md  serial_camera_stream.py
arduino/exam2/: Motor.cpp  Motor.h  exam2.ino  motor_ui.py  readme.md
arduino/test1/: exam2.ino  test1.ino
arduino/test2/: test2 - 복사본.ino
large_models_examples/: README.md  package.xml  setup.py
large_models_examples/large_models_examples/: llm_color_track.launch.py  llm_color_track.py  llm_control_move.launch.py  llm_control_move.py  llm_visual_patrol.launch.py  llm_visual_patrol.py
myrobot_ws/: README.md
myrobot_ws/config/: nav_goals.yaml
myrobot_ws/maps/: map.pgm  map.yaml  map2.pgm  map2.yaml
myrobot_ws/script2/: launch_nav2_gui.bat  launch_nav2_gui.sh  readme.md  run.sh  run_nav.sh  run_teleop.sh  save_map.sh  stop.sh  stop_nav2_gui.sh  test_gui.sh
myrobot_ws/scripts/: build_ws.sh  setup_wsl_nav2_tb3.sh  tb3_collect_map.sh  tb3_goto_pose.sh  tb3_goto_pose_service.sh  tb3_kill.sh  tb3_navigate_map.sh  tb3_teleop.sh
myrobot_ws/src/: nav_goal_runner.py
myrobot_ws/src/myrobot_interfaces/: CMakeLists.txt  package.xml
myrobot_ws/src/myrobot_nav_service/: package.xml  setup.cfg  setup.py
myrobot_ws/src/myrobot_nav_service/myrobot_nav_service/: go_to_pose_client.py  go_to_pose_service.py
