<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>large_models_examples</name>
  <version>1.0.0</version>
  <description>
    Voice-driven large-model example nodes for ROSOrin Pro: LLM-based chassis
    control, autonomous line following and color tracking, following the
    Hiwonder "12. Large AI Model Courses" tutorial.
  </description>
  <maintainer email="perpet99@gmail.com">perpet</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- Provided by the robot image, not part of this tutorial page -->
  <exec_depend>controller</exec_depend>
  <exec_depend>app</exec_depend>
  <exec_depend>large_models</exec_depend>
  <exec_depend>large_models_msgs</exec_depend>
  <exec_depend>interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
